Fixes header/footer to be responsive on mobile devices

--- a/inst/www/header_styles.css
+++ b/inst/www/header_styles.css
@@ -421,17 +421,13 @@ header{
 		.row__inner{
 			max-width: calc(100vw - 1rem);
 			width:calc(100vw - 1rem);
+      padding-top: 1rem
 		}
 		.row__outer--brand-bar {
 			border-bottom: #008FD5 solid 3px;
 		}
 		.welcome__text{
 			font-size:12px !important;
-		}
-		row__inner--header-bar{
-			padding: 0.7rem 0;
-			transform: scale(0.8);
-			transform-origin: 0;
 		}
 		.logo_wrapper::after {
 			height: 100%;
@@ -447,10 +443,7 @@ header{
 	@media screen and (min-width: 768px){
 		.row__inner{
 			max-width: calc(100vw - 2rem);
-		width: calc(100vw - 2rem);
-		}
-		.row__inner--header-bar{
-			padding: 1.25rem 0;
+   		width: calc(100vw - 2rem);
 		}
 		.logo_wrapper::after {
 			height: 76%;
